# cosmic-django

./: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  code-quality.yml  dependency-updates.yml  test-matrix.yml
cosmic/: .pydeps  manage.py
cosmic/allocation/: apps.py  models.py  signals.py  views.py
cosmic/allocation/migrations/: 0001_initial.py  0002_alter_allocation_batch_alter_allocation_line.py
cosmic/core/: __init__.py  apps.py
cosmic/core/logic/: logic.py
cosmic/core/service/: service.py
cosmic/core/tests/: test_api.py  test_batches.py  test_email.py  test_external_events.py  test_handlers.py  test_product.py  test_repository.py  test_uow.py  test_views.py
cosmic/cosmic/: asgi.py  settings.py  urls.py  wsgi.py
cosmic/cosmic/settings/: base.py  test.py
