[project]
name = "cosmic-django"
version = "0.1.0"
description = "Cosmic Python with Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions>=4.1",
    "django>=5.2.6",
    "ensures>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.0",
    "pytest-sugar>=1.1.1",
    "ipdb>=0.13.13",
    "pydeps>=3.0.1",
    "safety>=3.0.0",
]
